/*
 * $Id: ChangeLog,v 1.3371 2004/08/29 22:55:00 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-08-29 22:55 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * Changelog,v 1.3371
   * xharbour/utils/hbmake/hbmake.prg
     + fixed bound error when create a new makefile. 

   * xharbour/utils/hbmake/hbmutils.prg
     + create GetHarbourDir() function to avoid error when a lib is missing
       at xharbour\lib.
     + added new hbct and hbtip libs to external list libs.
     + added standard xharbour copyright text.
     - removed libct to external lib list.

   * xharbour/utils/hbmake/tmake.prg
     + added standard xharbour copyright text.

2004-08-29 22:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/xharbour.spec
    * lib name (ct -> hbct) changed

2004-08-29 20:20 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * include/Makefile
    * added missed ct*.ch
  * bin/hb-func.sh
    * changed tip to hbtip and ct to hbct. Przemyslaw please check.
    
2004-08-29 13:11 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/vm/arrayshb.c
    * casts as reported by Lorenzo and Sylvain

2004-08-29 13:02 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/ct/makefile
    * ct.lib -> hbct.lib
  * makefile.bc
  * makefile.vc
  * makefile.wc
  * makefile.nt
  * make_b32.bat
  * bin/bld.bat
    * correct MT support

2004-08-29 13:35 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
   * Changelog,v 1.3366
   * xharbour/make_b32.bat
     * Added effective cleaning hbtip.lib, binaries and several temp files from
       bin\b32, lib\b32 and \obj folder when "clean" parameter is called.

   * xharbour/utils/hbmake/hbmake.prg
     * More stetical and text/help messages reviewed.
     * Create s_cHbMakeVersion var and HbMakeVersion() function to inform